# master-notepad

./: .env.example  .gitignore  .prettierrc  AGENTS.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  start_dev.sh  vitest.config.ts
.husky/: pre-commit  pre-push
.omo/: ralph-loop.local.md
.omo/run-continuation/: ses_1a168a371ffeYR5Rbizo2o1IuS.json  ses_1af4903a8ffedduet5ZgbBDgaA.json  ses_1b09eb0dcffe6FIwm1Gf22s59j.json  ses_1b0ce8dfcffeGO8qT28IsZu8f5.json  ses_1b0d2f48affeprCZFYgA2pVPGg.json
assistant/: .env.example  Dockerfile  pyproject.toml  requirements.txt
assistant/src/: __init__.py  config.py  main.py
assistant/src/analysis/: audio_pipeline.py  patterns.py  sentiment.py
assistant/src/api/: analyze.py  ask.py  health.py  models.py  reindex.py
assistant/src/db/: vector_store.py
assistant/src/llm/: provider.py
assistant/src/rag/: embedder.py  ingester.py  retriever.py
backend/: .env.example  AGENTS.md  eslint.config.js  package.json  vitest.config.ts
backend/src/: ai-reindex.ts  app.ts  env.ts  index.ts
docs/: assistant.md  description.md  dev.md  prod.md  technical.md
docs/product/: assistant.md  overview.md
docs/tech/: PLAN.md  ai-analysis.md  architecture-integration.md  architecture.md  assistant.md  deployment.md  development.md  notifications.md  (+4 more)
e2e/: ai-integration.spec.ts  tender-summary.spec.ts
frontend/: .env.development  AGENTS.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: check-deps.sh  deploy.sh  dev.sh  prod.sh  seed.ts
tests/: setup.ts
(+121 files in other folders)
